// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/skeleton/demo/active.md correctly 1`] = `
<div
  class="ant-skeleton ant-skeleton-active"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width:38%"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/basic.md correctly 1`] = `
<div
  class="ant-skeleton"
>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width:38%"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/children.md correctly 1`] = `
<div
  class="article"
>
  <div>
    <h4>
      Ant Design, a design language
    </h4>
    <p>
      We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
    </p>
  </div>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Show Skeleton
    </span>
  </button>
</div>
`;

exports[`renders ./components/skeleton/demo/complex.md correctly 1`] = `
<div
  class="ant-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ant-skeleton-header"
  >
    <span
      class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
    />
  </div>
  <div
    class="ant-skeleton-content"
  >
    <h3
      class="ant-skeleton-title"
      style="width:50%"
    />
    <ul
      class="ant-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/element.md correctly 1`] = `
<div>
  <div>
    <form
      class="ant-form ant-form-inline"
      style="margin-bottom:16px"
    >
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="ButtonActive"
          >
            ButtonActive
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="ant-switch"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="ButtonSize"
          >
            ButtonSize
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline"
              >
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="default"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Default
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="large"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Large
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="small"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Small
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="ButtonShape"
          >
            ButtonShape
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline"
              >
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="default"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Default
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="round"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Round
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="circle"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Circle
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ant-skeleton ant-skeleton-element"
    >
      <span
        class="ant-skeleton-button"
      />
    </div>
  </div>
  <br />
  <div>
    <form
      class="ant-form ant-form-inline"
      style="margin-bottom:16px"
    >
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="AvatarActive"
          >
            AvatarActive
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="ant-switch"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="AvatarSize"
          >
            AvatarSize
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline"
              >
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="default"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Default
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="large"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Large
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="small"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Small
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="AvatarShape"
          >
            AvatarShape
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline"
              >
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="square"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Square
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="circle"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Circle
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ant-skeleton ant-skeleton-element"
    >
      <span
        class="ant-skeleton-avatar ant-skeleton-avatar-circle"
      />
    </div>
  </div>
  <br />
  <div>
    <form
      class="ant-form ant-form-inline"
      style="margin-bottom:16px"
    >
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="InputActive"
          >
            InputActive
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <button
                aria-checked="false"
                class="ant-switch"
                role="switch"
                type="button"
              >
                <div
                  class="ant-switch-handle"
                />
                <span
                  class="ant-switch-inner"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="InputSize"
          >
            InputSize
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline"
              >
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="default"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Default
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="large"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Large
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="small"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Small
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ant-skeleton ant-skeleton-element"
    >
      <span
        class="ant-skeleton-input"
        style="width:300px"
      />
    </div>
  </div>
  <br />
  <div>
    <form
      class="ant-form ant-form-inline"
      style="margin-bottom:16px"
    >
      <div
        class="ant-row ant-form-item"
      >
        <div
          class="ant-col ant-form-item-label"
        >
          <label
            class=""
            title="ImageSize"
          >
            ImageSize
          </label>
        </div>
        <div
          class="ant-col ant-form-item-control"
        >
          <div
            class="ant-form-item-control-input"
          >
            <div
              class="ant-form-item-control-input-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline"
              >
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="default"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Default
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="large"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Large
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="small"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    Small
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ant-skeleton ant-skeleton-element"
    >
      <span
        class="ant-skeleton-image"
      >
        <svg
          class="ant-skeleton-image-svg"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="ant-skeleton-image-path"
            d="M984.615385 196.923077c0-43.323077-35.446154-78.769231-78.769231-78.769231H118.153846c-43.323077 0-78.769231 35.446154-78.769231 78.769231v630.153846c0 43.323077 35.446154 78.769231 78.769231 78.769231h787.692308c43.323077 0 78.769231-35.446154 78.769231-78.769231V196.923077zM779.815385 748.307692h-571.076923c-23.630769 0-37.415385-25.6-25.6-45.292307l173.292307-301.292308c7.876923-13.784615 25.6-13.784615 33.476923 0l104.369231 179.2c7.876923 11.815385 25.6 13.784615 33.476923 1.969231l84.676923-122.092308c7.876923-11.815385 25.6-11.815385 33.476923 0L801.476923 708.923077c11.815385 17.723077 0 39.384615-21.661538 39.384615zM728.615385 393.846154c-43.323077 0-78.769231-35.446154-78.769231-78.769231s35.446154-78.769231 78.769231-78.769231 78.769231 35.446154 78.76923 78.769231-35.446154 78.769231-78.76923 78.769231z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/list.md correctly 1`] = `
<div>
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    />
    <span
      class="ant-switch-inner"
    />
  </button>
  <div
    class="ant-list ant-list-vertical ant-list-lg ant-list-split"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-skeleton ant-skeleton-with-avatar ant-skeleton-active"
            >
              <div
                class="ant-skeleton-header"
              >
                <span
                  class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
                />
              </div>
              <div
                class="ant-skeleton-content"
              >
                <h3
                  class="ant-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="ant-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-skeleton ant-skeleton-with-avatar ant-skeleton-active"
            >
              <div
                class="ant-skeleton-header"
              >
                <span
                  class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
                />
              </div>
              <div
                class="ant-skeleton-content"
              >
                <h3
                  class="ant-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="ant-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-skeleton ant-skeleton-with-avatar ant-skeleton-active"
            >
              <div
                class="ant-skeleton-header"
              >
                <span
                  class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
                />
              </div>
              <div
                class="ant-skeleton-content"
              >
                <h3
                  class="ant-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="ant-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
